--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
+    "@solana/wallet-adapter-react-ui": "^0.9.6",
+    "@solana/wallet-adapter-wallets": "^0.16.0",
     "bs58": "^5.0.0",
     "framer-motion": "^11.0.5",
     "localforage": "^1.10.0",
