--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://<ma-za-kpe>.github.io/<Repository-name>",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,15 +18,22 @@
     "@mui/material": "^5.15.11",
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.16.0",
+    "@web3-react/core": "^8.2.3",
+    "@web3-react/types": "^8.2.3",
     "bs58": "^5.0.0",
+    "eventemitter3": "^5.0.1",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.5",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "sort-by": "^1.2.0",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "web3-react-phantom": "^1.0.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -35,6 +43,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "vite": "^5.1.4"
   }
 }
