--- a/package.json
+++ b/package.json
@@ -11,39 +11,59 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@metaplex-foundation/js": "^0.20.1",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/spl-account-compression": "^0.2.0",
+    "@solana/spl-token": "^0.3.11",
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.16.0",
+    "@solana/web3.js": "^1.90.0",
     "@web3-react/core": "^8.2.3",
     "@web3-react/types": "^8.2.3",
     "bs58": "^5.0.0",
+    "chartjs-to-image": "^1.2.2",
+    "D": "^1.0.0",
+    "dotenv": "^16.0.1",
     "eventemitter3": "^5.0.1",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.5",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.12.1",
     "sort-by": "^1.2.0",
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
     "swiper": "^11.0.6",
     "web3-react-phantom": "^1.0.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "assert": "^2.1.0",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "gh-pages": "^6.1.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "util": "^0.12.5",
     "vite": "^5.1.4"
   }
 }
