--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@emotion/styled": "^11.11.0",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-bubblegum": "^3.1.2",
+    "@metaplex-foundation/umi": "^0.9.1",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@project-serum/anchor": "^0.26.0",
