--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PRIVATE_KEY=
+# PROD_NODE_ENV=https://ecedilink.onrender.com/
+# PROD_DJANGO_ENV=https://ndvi-vwp8.onrender.com/
+LOCAL_NODE_ENV=http://localhost:3000
+LOCAL_DJANGO_ENV=http://127.0.0.1:8000
