--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@web3-react/core": "^8.2.3",
     "@web3-react/types": "^8.2.3",
     "bs58": "^5.0.0",
+    "buffer": "^6.0.3",
     "chartjs-to-image": "^1.2.2",
     "D": "^1.0.0",
     "dotenv": "^16.0.1",
@@ -38,6 +39,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.5",
     "html2canvas": "^1.4.1",
+    "image-conversion": "^2.1.1",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
