add coool stuff

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PRIVATE_KEY=
+REACT_APP_HELIUS_KEY=b96c6058-3f8a-414d-a166-722d95fe5c54
 # PROD_NODE_ENV=https://ecedilink.onrender.com/
 # PROD_DJANGO_ENV=https://ndvi-vwp8.onrender.com/
 LOCAL_NODE_ENV=http://localhost:3000
